@@ -1,2 +1,0 @@
-This code provides bindings written in Python to communicate with the SoftLayer
-Message Queue API.
