@@ -1,34 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2014/06/08 23:09:53 rodent Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/softlayer_messaging/__init__.py
-${PYSITELIB}/softlayer_messaging/__init__.pyc
-${PYSITELIB}/softlayer_messaging/__init__.pyo
-${PYSITELIB}/softlayer_messaging/auth.py
-${PYSITELIB}/softlayer_messaging/auth.pyc
-${PYSITELIB}/softlayer_messaging/auth.pyo
-${PYSITELIB}/softlayer_messaging/client.py
-${PYSITELIB}/softlayer_messaging/client.pyc
-${PYSITELIB}/softlayer_messaging/client.pyo
-${PYSITELIB}/softlayer_messaging/compat.py
-${PYSITELIB}/softlayer_messaging/compat.pyc
-${PYSITELIB}/softlayer_messaging/compat.pyo
-${PYSITELIB}/softlayer_messaging/constants.py
-${PYSITELIB}/softlayer_messaging/constants.pyc
-${PYSITELIB}/softlayer_messaging/constants.pyo
-${PYSITELIB}/softlayer_messaging/errors.py
-${PYSITELIB}/softlayer_messaging/errors.pyc
-${PYSITELIB}/softlayer_messaging/errors.pyo
-${PYSITELIB}/softlayer_messaging/queue.py
-${PYSITELIB}/softlayer_messaging/queue.pyc
-${PYSITELIB}/softlayer_messaging/queue.pyo
-${PYSITELIB}/softlayer_messaging/resource.py
-${PYSITELIB}/softlayer_messaging/resource.pyc
-${PYSITELIB}/softlayer_messaging/resource.pyo
-${PYSITELIB}/softlayer_messaging/resources/config.json
-${PYSITELIB}/softlayer_messaging/topic.py
-${PYSITELIB}/softlayer_messaging/topic.pyc
-${PYSITELIB}/softlayer_messaging/topic.pyo
